Added new content to sub pages

--- a/website/blurayRewinder.html
+++ b/website/blurayRewinder.html
@@ -40,29 +40,33 @@
 
         <div id="productContainer">
           <ul id="productList" class="grid">
-            <li>
-              <a href="img/blurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+            <li class="bluray">
+              <a href="img/blurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/blurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">We all love high-def, that's a given, but aren't you sick of throwing out your blurays after watching because they can't be rewound?  Here is the answer!</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">5000</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/diskDriveBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+            <li class="bluray">
+              <a href="img/diskDriveBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/diskDriveBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Like the other, but compact!  Pay more for less!</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">5001</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/highBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+            <li class="bluray">
+              <a href="img/highBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/highBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">The common-or-garden bluray rewinder.  This model is boring.  You pay less, but would you rather be bored?  WOULD YOU?</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">5</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/multiBlurayRewinder1.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
+            <li class="bluray">
+              <a href="img/multiBlurayRewinder1Large.jpg" title="Blu-Ray Rewinder" rel="lightbox"><img src="img/multiBlurayRewinder1.jpg" alt="Blu-Ray Rewinder"/></a>
               <strong>Blu-Ray Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Like the standard blu-ray rewinder, but it does two!  Therefore we're justified in charging double.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">10000</span></p>
+              <p class="rating">3.5</p>
             </li>
           </ul>
         </div>
