--- a/website/cdRewinder.html
+++ b/website/cdRewinder.html
@@ -40,29 +40,34 @@
 
         <div id="productContainer">
           <ul id="productList" class="grid">
-            <li>
-              <a href="img/cdRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
+            
+            <li class="cd">
+              <a href="img/cdRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/cdRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Rewind your ancient music CDs.  It says shock resistant on the package, but EVERY report says otherwise...</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">449</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/multiCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
+            <li class="cd">
+              <a href="img/multiCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Ever wanted to rewind multiple CDs at once?  This one can!  Unfortunately this model rewinds at one quarter the speed of normal rewinders.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">149</p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/pocketCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
+            <li class="cd">
+              <a href="img/pocketCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/pocketCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Really generic.  Doesn't really do much fancy shizz.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">1249</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/bulkCDRewinder1.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
+            <li class="cd">
+              <a href="img/bulkCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/bulkCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">This one looks fancy, that's because it is!  Trust me, it is... Please think it is :(</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">679</span></p>
+              <p class="rating">3.5</p>
             </li>
           </ul>
         </div>
