--- a/website/dvdRewinder.html
+++ b/website/dvdRewinder.html
@@ -40,29 +40,48 @@
 
         <div id="productContainer">
           <ul id="productList" class="grid">
-            <li>
-              <a href="img/dvdRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
-              <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+            <li class="dvd unavailable">
+              <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <strong class="title">DVD Rewinder</strong>
+              <p class="detail">The original, the classic.  As you can see in the image, it even comes with its own disk!</p>
+              <p>Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">4.0</p>
             </li>
-            <li>
-              <a href="img/5DiskDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
-              <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+
+            <li class="dvd">
+              <a href="img/dvdRewinder2Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder2.jpg" alt="DVD Rewinder"/></a>
+              <strong class="title">DVD Rewinder</strong>
+              <p class="detail">The original, the classic.  This one doesn't come with a disk but still costs the same as the one which does.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">4.0</p>
             </li>
-            <li>
-              <a href="img/pocketDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+            <li class="dvd">
+              <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">The original, again!  Seriously, it's so good we put it in the catalog twice.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">849</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/ultraDVDRewinder1.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+            <li class="dvd">
+              <a href="img/5DiskDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/5DiskDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong>DVD Rewinder</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">This is the grand-daddy of DVD rewinders.  If Cuban cigars were DVD rewinders, they'd be this.  5 disk capacity, 10000x the speed of the next model.  Low price too.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">100000</span></p>
+              <p class="rating">3.5</p>
+            </li>
+            <li class="dvd">
+              <a href="img/pocketDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/pocketDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <strong>DVD Rewinder</strong>
+              <p class="detail">Small, concise.  Just like this caption.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">100</span></p>
+              <p class="rating">3.5</p>
+            </li>
+            <li class="dvd">
+              <a href="img/ultraDVDRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/ultraDVDRewinder1.jpg" alt="DVD Rewinder"/></a>
+              <strong>DVD Rewinder</strong>
+              <p class="detail">This one looks awesome.  There is a reason it's called the ultimate.  Because it is.  The ultimate.  No questions.  The 5 disk one may be slightly better though...</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">3.5</p>
             </li>
           </ul>
         </div>
