--- a/website/rewindBurners.html
+++ b/website/rewindBurners.html
@@ -40,30 +40,34 @@
 
         <div id="productContainer">
           <ul id="productList" class="grid">
-            <li>
-              <a href="img/CDBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
+            <li class="burner">
+              <a href="img/CDBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/CDBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Creates burns of your dvds as you rewind them!  That's what you want right?  All our consumer surveys said so.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/compBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
+            <li class="burner">
+              <a href="img/compBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/compBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Burns dvds, but there is only one tray.  This means it just rewinds.  Casing is barebones and therefore hardcore.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/pocketBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
+            <li class="burner">
+              <a href="img/pocketBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/pocketBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
+              <p class="detail">Burns dvds, but there is only one tray.  This means it just rewinds.</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">3.5</p>
             </li>
-            <li>
-              <a href="img/ultraBurner1.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
+            <li class="burner">
+              <a href="img/ultraBurner1Large.jpg" title="Rewind Burner" rel="lightbox"><img src="img/ultraBurner1.jpg" alt="Rewind Burner"/></a>
               <strong>Rewind Burner</strong>
-              <p class="price">Price: $249</p>
-              <p class="rating">Rating: 4/5</p>
-            </li>
+              <p class="detail">Burns dvds, but there is only one tray.  This means it just rewinds.  It's BIG!</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">249</span></p>
+              <p class="rating">3.5</p>
+            </li> 
           </ul>
         </div>
         
