contact us form validation complete

--- a/website/contactUs.html
+++ b/website/contactUs.html
@@ -13,6 +13,7 @@
      <link rel="stylesheet" href="css/contactUs-small.css" media="screen and (max-width: 554px)" />
 
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="js/contact-me.js"></script>
   </head>
 
   <body>
@@ -29,15 +30,15 @@
           <p>Please provide your feedback in the boxes below</p>    
           <p>
             <label for="firstname">* First name:</label>
-            <input type="text" name="firstname" id="firstname" onfocus="resetField(this);" />
+            <input type="text" name="firstname" id="firstname" onfocus="resetField(this);" placeholder="first name" />
           </p>
           <p>
             <label for="lastname">* Last name:</label>
-            <input type="text" name="lastname" id="lastname" onfocus="resetField(this);" />
+            <input type="text" name="lastname" id="lastname" onfocus="resetField(this);" placeholder="eg. last name"/>
           </p>
           <p>
             <label for="email">* E-mail address:</label>
-            <input type="text" name="email" id="email" onfocus="resetField(this);" />
+            <input type="email" name="email" id="email" onfocus="resetField(this);" placeholder="eg. john@example.com"/>
           </p>
           <p>
             <label for="message">* Your Message:</label>
