--- a/website/home.html
+++ b/website/home.html
@@ -24,15 +24,15 @@
       <div id="main">
         <div class="specials">
           <h1>Weekly Specials</h1>
-          <div class="special"><img src="img/5DiskDVDRewinder1.jpg"><h1>Rewinder 10000</h1><h2 class="offer">Only $899, down from $1299</h2><p>Click to find out more</p></div>
-          <div class="special"><img src="img/dvdRewinder1.jpg"><h1>Original Rewinder</h1><h2 class="offer">Only $499, down from $999</h2><p>Click to find out more</p></div>
+          <div class="special"><img src="img/5DiskDVDRewinder1.jpg" alt="Dvd rewinder on special"/><h1>Rewinder 10000</h1><h2 class="offer">Only $899, down from $1299</h2><p>Click to find out more</p></div>
+          <div class="special"><img src="img/dvdRewinder1.jpg" alt="Dvd rewinder on special"/><h1>Original Rewinder</h1><h2 class="offer">Only $499, down from $999</h2><p>Click to find out more</p></div>
         </div>
 
         <div class="specials">
           <h1>New Products</h1>
-          <div class="special"><img src="img/ultraDVDRewinder1.jpg"><h1>Derpaderp</h1><h2 class="cost">$299</h2><p>Want a rewinder that does it all?</p><p>People are call it "The Beast"</p>
+          <div class="special"><img src="img/ultraDVDRewinder1.jpg"  alt="New DVD rewinder"/><h1>Derpaderp</h1><h2 class="cost">$299</h2><p>Want a rewinder that does it all?</p><p>People are call it "The Beast"</p>
             <p>It even plays DVD's too!</p><p>Click to find out more</p></div>
-          <div class="special"><img src="img/pocketBurner1.jpg"><h1>Pocket DVD Rewinder</h1><h2 class="cost">$229</h2><p>Ever wanted to carry your DVD rewinder with you at all times?</p>
+          <div class="special"><img src="img/pocketBurner1.jpg" alt="New DVD rewinder"/><h1>Pocket DVD Rewinder</h1><h2 class="cost">$229</h2><p>Ever wanted to carry your DVD rewinder with you at all times?</p>
             <p>This could be for you!</p><p>Click to find out more</p></div>
         </div>
       </div>
