--- a/website/aboutUs.html
+++ b/website/aboutUs.html
@@ -13,7 +13,7 @@
      <link rel="stylesheet" href="css/aboutUs-small.css" media="screen and (max-width: 799px)" />
 
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript" src="js/aboutUs.js"></script>
   </head>
 
