--- a/website/all.html
+++ b/website/all.html
@@ -77,7 +77,7 @@
               <a href="img/multiCDRewinder1Large.jpg" title="CD Rewinder" rel="lightbox"><img src="img/multiCDRewinder1.jpg" alt="CD Rewinder"/></a>
               <strong>CD Rewinder</strong>
               <p class="detail">Ever wanted to rewind multiple CDs at once?  This one can!  Unfortunately this model rewinds at one quarter the speed of normal rewinders.</p>
-              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">149</p>
+              <p class="price">Price: $<span class="price" style="display: inline-block; font-size: 14px;">149</span></p>
               <p class="rating">3.5</p>
             </li>
             <li class="cd">
