--- a/website/blurayRewinder.html
+++ b/website/blurayRewinder.html
@@ -6,10 +6,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style-full.css"  media="screen and (min-width: 950px)"/>
-     <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
-     
+    <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
+
+    <link rel="stylesheet" type="text/css" href="css/lightbox.css" />
     <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/products.js"></script>
+    <script type="text/javascript" src="js/lightbox.js"></script>
   </head>
 
   <body>
