fixed individual rewinder pages to sort

--- a/website/dvdRewinder.html
+++ b/website/dvdRewinder.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="css/style-full.css"  media="screen and (min-width: 950px)"/>
      <link rel="stylesheet" href="css/style-mid.css" media="screen and (max-width: 949px)" />
      
+    <link rel="stylesheet" type="text/css" href="css/lightbox.css" />
     <link rel="stylesheet" href="css/products.css" />
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/products.js"></script>
+    <script type="text/javascript" src="js/lightbox.js"></script>
   </head>
 
   <body>
@@ -38,8 +42,8 @@
           </ul>
         </div>
 
-        <div id="productContainer">
-          <ul id="productList" class="grid">
+        <div id="products">
+          <ul id="grid" class="list">
             <li class="dvd unavailable">
               <a href="img/dvdRewinder1Large.jpg" title="DVD Rewinder" rel="lightbox"><img src="img/dvdRewinder1.jpg" alt="DVD Rewinder"/></a>
               <strong class="title">DVD Rewinder</strong>
